# sc-based_FL

./: .gitignore  README.md  docker-compose.yaml
hardhat/: Dockerfile  package-lock.json
src/: Dockerfile
src/contract/: FLContract.sol  FLContract_proto.sol
src/initial/: init_model  test_chain_func.py
src/training/: __init__.py  pyproject.toml  requirements.txt
src/training/strategy/: __init__.py  de_fed.py  test_chain_func.py
src/training/xgboost_comprehensive/: abi.json  client_app.py  de_fed.py  server_app.py
